--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   </head>
   <body>
     <header>
-      <img src="https://via.placeholder.com/200x70/222" alt="">
-      <nav>
-        <ul>
-          <li>Nav Item 1</li>
-          <li>Nav Item 2</li>
-          <li>Nav Item 3</li>
-          <li>Nav Item 4</li>
-        </ul>
-      </nav>
+        <div><img src="https://via.placeholder.com/200x70/222" alt="">
+            <nav>
+              <ul>
+                <li>Nav Item 1</li>
+                <li>Nav Item 2</li>
+                <li>Nav Item 3</li>
+                <li>Nav Item 4</li>
+              </ul>
+            </nav></div>
     </header>
 
     <main>
